Date widget overlapping in data-table of reports issue fixed

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -1028,6 +1028,7 @@ table.tall td {
 .collapsed{
     display: none;
     border: 1px solid orange;
+    margin-bottom: 50px;
 }
 a.expand_collapsed{
     color: white;
